Bug 1551425: Part 2) Change reference to parent in `nsAttrChildContentList` from non-owning to RefPtr. r=smaug

With a non-owning reference, a JS reference to the NodeList didn't keep its
items alive. With this change, the NodeList keeps the parent node (which keeps
its children alive) alive.

Differential Revision: https://phabricator.services.mozilla.com/D34151